--- a/index.html
+++ b/index.html
@@ -3,9 +3,46 @@
 <head>
 	<title>ДЗ MoGo_FREE_Template_by_Laaqiq</title>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/style.css">
  	
 </head>	
 	<body>
+			<div id="wrapper">
+		<header id="header">
+			<div class="container">
+				<strong class="logo"><a href="#">MoGo</a></strong>
+				<div class="search">
+					<a href="#"><i class="ico"><img src="img/ico-search.svg" alt="image description" width="18" height="18"></i></a>
+				</div>
+				<div class="basket">
+					<a href="#"><i class="ico"><img src="img/ico-basket.svg" alt="image description" width="18" height="15"></i></a>
+				</div>
+				<nav class="main-nav">
+					<ul>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Service</a></li>
+						<li><a href="#">Work</a></li>
+						<li><a href="#">Blog</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		<section class="banner">
+			<div class="container">
+				<div class="cell">
+					<h3 class="typed"><span class="typed-js" data-text="Creative Template"></span></h3>
+					<h1><strong>Welcome</strong><strong>to MoGo</strong></h1>
+					<a href="#" class="btn btn-transparent">Learn more</a>
+				</div>
+				<ul class="nav">
+					<li class="active"><a href="#"><strong>01</strong> intro</a></li>
+					<li><a href="#"><strong>02</strong> work</a></li>
+					<li><a href="#"><strong>03</strong> about</a></li>
+					<li><a href="#"><strong>04</strong> contacts</a></li>
+				</ul>
+			</div>
+		</section>
 	
 	
 	
